# ibus-buffalo

./: Cargo.toml  Makefile  README.md  buffalo.xml  ibus-setup-buffalo.desktop  package-deb.sh
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: charset.rs  encoder.rs  engine.rs  lib.rs  rules.rs  spelling.rs
core/tests/: typing_tests.rs
daemon/: Cargo.toml
daemon/src/: config.rs  dbus_types.rs  engine.rs  factory.rs  lib.rs  macros.rs  main.rs  server.rs  utils.rs  x11_helper.rs
daemon/tests/: daemon_tests.rs
ui/: Cargo.toml
ui/src/: app.rs  main.rs  style.rs
