[package]
name = "ibus-buffalo"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52", features = ["full"] }
wayland-client = "0.31.14"
x11 = { version="2.21.0", features = ["xlib", "xtest"] }
zbus = { version = "5.16.0", features = ["p2p"] }
buffalo-core = { path = "../core" }
toml = "1.1.2"

[dev-dependencies]
futures = "0.3"


